# hodocomm

./: README.md
app/: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  routers.py  schemas.py
docs/: architecture.md
web/: package.json  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/ai/: page.tsx
web/src/app/meetings/: MeetingList.tsx  page.tsx
web/src/app/meetings/new/: page.tsx
web/src/app/tasks/: TaskList.tsx  page.tsx
web/src/app/tasks/new/: page.tsx
web/src/app/teams/: page.tsx
web/src/components/: Nav.tsx
web/src/lib/: api.ts  filters.ts
